# sp2022-hackathon

./: README.md
lammps-ani/: .gitignore  CMakeLists.txt  LAMMPSInterfaceCXX.cmake  README.md  ani_plugin.cpp  pair_ani.cpp  pair_ani.h
lammps-ani/ani_csrc/: CMakeLists.txt  ani.cpp  ani.h  save_ani.py  test_model.cpp
lammps-ani/cuaev/: CMakeLists.txt
lammps-ani/example/C2/: C2_50k.lmp  in.plugin.lammps  lmp_ani_multi_nodes.sh
lammps-ani/example/water/: in.plugin.lammps  in.small.plugin.lammps  water-5.lmp
perf/: .gitignore  README.md  benchmark.py  waterbox.py
